Upgrade Spring Boot 3